src-errormsg/E22-EqOnFunction/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E22-EqOnFunction/Plinth.hs:33:20: error: [GHC-39999]
    • No instance for ‘Eq (Withdraw -> Integer)’
        arising from a use of ‘==’
        (maybe you haven't applied a function to enough arguments?)
    • In the expression: netWithdraw == netWithdraw
      In an equation for ‘same’: same = netWithdraw == netWithdraw
   |
33 | same = netWithdraw == netWithdraw
   |                    ^^
